[package]
name = "kvs"
version = "0.1.0"
authors = ["'Jason King' <'chn.kei@gmail.com'>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.18"
serde = "1.0.97"
bson = "0.13"

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
tempfile = "3.1.0"
walkdir = "2.2.8"

[[bin]]
name = "kvs"
test = false
doctest = false